--- a/snapDish/package.json
+++ b/snapDish/package.json
@@ -17,5 +17,8 @@
   "cordovaPlugins": [
     "org.apache.cordova.inappbrowser",
     "org.apache.cordova.camera"
+  ],
+  "cordovaPlatforms": [
+    "android"
   ]
 }
